#
# Copyright (c) 2002  Jean-Charles Salzeber <jc@varspool.net>
#
# This file is part of penggy program.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Nicolas Burrus <nes@lrde.epita.fr>, 2002
#
# $Id$
#


noinst_HEADERS = act.h		\
	         activex.h	\
		 ad.h		\
		 adp.h		\
		 app.h		\
		 artexp.h	\
		 async.h	\
		 blank.h	\
		 buddy.h	\
		 buf.h		\
		 ccl.h		\
		 chart.h	\
		 chat.h		\
		 cm.h		\
		 comit.h	\
		 de.h		\
		 dice.h		\
		 doc.h		\
		 dod.h		\
		 dpc.h		\
		 exapi.h	\
		 fm.h		\
		 gallery.h	\
		 hfs.h		\
		 htmlview.h	\
		 idb.h		\
		 if.h		\
		 image.h	\
		 imgxfer.h	\
		 irc.h		\
		 java.h		\
		 lm.h		\
		 man.h		\
		 map.h		\
		 mat.h		\
		 merc.h		\
		 mf.h		\
		 mip.h		\
		 mmi.h		\
		 morg.h		\
		 mt.h		\
		 p3.h		\
		 phone.h	\
		 pictalk.h	\
		 plugin.h	\
		 radio.h	\
		 rich.h		\
		 sage.h		\
		 sap.h		\
		 sec_ip.h	\
		 slider.h	\
		 sm.h		\
		 spell.h	\
		 uni.h		\
		 var.h		\
		 vid.h		\
		 vrm.h		\
		 www.h		\
		 xfer.h

