#
# Copyright (c) 2002-2003  Jean-Charles Salzeber <jc@varspool.net>
#
# This file is part of penggy program.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Nicolas Burrus <nes@lrde.epita.fr>, 2002
#
# $Id$
#

noinst_LIBRARIES = libatoms.a
libatoms_a_SOURCES = act.c		\
                     activex.c		\
		     ad.c		\
		     adp.c		\
		     app.c		\
		     artexp.c		\
		     async.c		\
		     blank.c		\
		     buddy.c		\
		     buf.c		\
		     ccl.c		\
		     chart.c		\
		     chat.c		\
		     cm.c		\
		     comit.c		\
		     de.c		\
		     dice.c		\
		     doc.c		\
		     dod.c		\
		     dpc.c		\
		     exapi.c		\
		     fm.c		\
		     gallery.c		\
		     hfs.c		\
		     htmlview.c		\
		     idb.c		\
		     if.c		\
		     image.c		\
		     imgxfer.c		\
		     irc.c		\
		     java.c		\
		     lm.c		\
		     man.c		\
		     map.c		\
		     mat.c		\
		     merc.c		\
		     mf.c		\
		     mip.c		\
		     mmi.c		\
		     morg.c		\
		     mt.c		\
		     p3.c		\
		     phone.c		\
		     pictalk.c		\
		     plugin.c		\
		     radio.c		\
		     rich.c		\
		     sage.c		\
		     sap.c		\
		     sec_ip.c		\
		     slider.c		\
		     sm.c		\
		     spell.c		\
		     uni.c		\
		     var.c		\
		     vid.c		\
		     vrm.c		\
		     www.c		\
		     xfer.c

